[tool.poetry]
name = "secondemotion"
version = "0.1.0"
description = ""
authors = ["ihkap11 <bpakhi97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.18.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
